fix:django_expense done

--- a/Django_Expenses/Pipfile
+++ b/Django_Expenses/Pipfile
@@ -9,6 +9,9 @@ validate-email = "*"
 celery = "*"
 itsdangerous = "*"
 redis = "*"
+xlwt = "*"
+reportlab = "*"
+weasyprint = "*"
 
 [dev-packages]
 
